syntax = "proto3";

package info_age.bremote;

import "google/protobuf/empty.proto";
import "types.proto";

option go_package="api";
//option php_namespace="mediaserver";
option java_package = "net.info-age.bremote.client";

message BrowserInitFlag {
	string Name = 1;
	oneof value {
		string strval = 2;
		bool bval = 3;
	}
}

message NavigateParam {
	string Url = 1;
	string NextStatus = 2;
}

message BrowserInitFlags {
	repeated BrowserInitFlag flags = 1;
}

message BrowserLog {
	repeated string entry = 1;
}

message MouseCoord {
	int64 x = 1;
	int64 y = 2;
}

message ClickMessage {
	oneof target {
		string element = 1;
		MouseCoord coord = 2;
	}
	int64 timeout = 3;
	string waitvisible = 4;
}

message ClickItemMessage {

}

service ClientService {
	rpc Ping( String ) returns ( String ) {};
	rpc StartBrowser( BrowserInitFlags ) returns ( google.protobuf.Empty ) {};
	rpc Navigate( NavigateParam ) returns ( google.protobuf.Empty ) {};
	rpc ShutdownBrowser( google.protobuf.Empty ) returns ( google.protobuf.Empty ) {};
	rpc GetStatus( google.protobuf.Empty ) returns ( String ) {};
	rpc GetHTTPSAddr( google.protobuf.Empty ) returns ( String ) {};
	rpc GetBrowserLog( google.protobuf.Empty ) returns ( BrowserLog ) {};
	rpc SetStatus( String ) returns ( google.protobuf.Empty ) {};
	rpc WebsocketMessage( Bytes ) returns (google.protobuf.Empty) {}
	rpc MouseClick( ClickMessage ) returns ( google.protobuf.Empty ) {};
}
