syntax = "proto3";

package info_age.bremote;

import "google/protobuf/empty.proto";

import "types.proto";

option go_package="api";
//option php_namespace="mediaserver";
option java_package = "net.info-age.bremote.proxy";

message InitParam {
    String instance = 1;
    ProxySessionType sessionType = 2;
}

service ProxyService {
    rpc Ping( String ) returns ( String ) {};
    rpc Init( InitParam ) returns (google.protobuf.Empty) {}
}
