syntax = "proto3";

package info_age.bremote;

import "google/protobuf/any.proto";

option go_package="api";
option java_package = "net.info-age.bremote.server";

message String {
    string value = 1;
}

message Boolean {
    bool value = 1;
}

enum ProxySessionType {
    Undefined = 0;
    Client = 1;
    Controller = 2;
}

message ProxyClient {
    ProxySessionType type = 1;
    string instance = 2;
    string status = 3;
}

message WebSocketParam {
    google.protobuf.Any message = 1;
}
